# porto

./: .arcignore  .clang-format  .dir-locals.el  .gitattributes  .gitignore  .mapping.json  .piglet-meta.json  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  dpkg-buildpackage  format.sh  porto.md
.github/workflows/: cmake.yml  release.yml
debian/: changelog  control  control.in  copyright  porto.cron.d.in  porto.docs.in  porto.init.in  porto.postinst.in  porto.service.in  porto.upstart.in  rules
doc/: porto.md  processes_and_threads.md
scripts/: Dockerfile
src/: CMakeLists.txt  bpf.cpp  bpf.hpp  cgroup.cpp  cgroup.hpp  cli.cpp  cli.hpp  client.cpp  client.hpp  common.hpp  config.cpp  config.hpp  config.proto  container.cpp  container.hpp  core.cpp  core.hpp  cpuset.cpp  cpuset.hpp  device.cpp  device.hpp  docker.cpp  docker.hpp  env.cpp  env.hpp  epoll.cpp  epoll.hpp  event.cpp  event.hpp  filesystem.cpp  filesystem.hpp  helpers.cpp  helpers.hpp  kvalue.cpp  kvalue.hpp  loop.cpp  loop.hpp  main.cpp  master.cpp  nbd.cpp  (+29 more)
src/api/cpp/: CMakeLists.txt  libporto.cpp  libporto.hpp
src/api/go/: CMakeLists.txt
src/api/go/porto/: go.mod  porto.go  porto_mock.go  porto_test.go
src/api/go/porto/pkg/rpc/: rpc.pb.go
src/api/go/porto/pkg/seccomp/: seccomp.pb.go
src/api/python/: CMakeLists.txt  setup.py
src/api/python/porto/: api.py
src/fmt/: CMakeLists.txt
src/metrics/: CMakeLists.txt  metrics.cpp  metrics.hpp
src/util/: CMakeLists.txt  crc32.cpp  crc32.hpp  cred.cpp  cred.hpp  error.cpp  error.hpp  hgram.hpp  http.cpp  http.hpp  idmap.hpp  locks.hpp  log.cpp  log.hpp  md5.cpp  md5.hpp  mutex.cpp  mutex.hpp  namespace.cpp  namespace.hpp  netlink.cpp  netlink.hpp  path.cpp  path.hpp  proc.cpp  proc.hpp  quota.cpp  quota.hpp  sha256.cpp  sha256.hpp  signal.cpp  socket.cpp  socket.hpp  string.cpp  string.hpp  task.cpp  task.hpp  tcp_info.hpp  unix.cpp  unix.hpp  (+1 more)
src/util/cpp-httplib/: download.sh  httplib.h
src/util/nlohmann-safe/: CMakeLists.txt  json.cpp  json.hpp
src/util/prometheus-cpp-lite/: CMakeLists.txt
src/util/prometheus-cpp-lite/3rdpatry/http-client-lite/: CMakeLists.txt
src/util/prometheus-cpp-lite/core/: CMakeLists.txt
src/util/prometheus-cpp-lite/core/include/prometheus/: benchmark.h  builder.h  ckms_quantiles.h  family.h  registry.h  save_to_file.h  summary.h  text_serializer.h  time_window_quantiles.h
src/util/prometheus-cpp-lite/simpleapi/: CMakeLists.txt
test/: CMakeLists.txt  fuzzer.py  idle_client.py  porto-509-repro.py  selftest.cpp  test-api.py  test-async-cleanup.py  test-aufs.py  test-cgroupns.py  test-clear.py  test-coredump.py  test-cpu-jail.py  test-cpu_limit.py  test-cpu_policy.py  test-ct-state.py  test-devices.py  test-dirty-limit.py  test-docker-images.py  test-docker.py  test-extra_properties.py  test-freezer.py  test-hijack.py  test-htb-restore.py  test-hugetlb.py  test-io-limit.py  test-io-stat.py  test-isolation.py  test-jobs.py  test-knobs.py  test-labels.py  test-legacy-root-loop.py  test-locate-process.py  test-mem-overcommit.py  test-mem-recharge.py  test-mem_limit.py  test-mem_limit_total.py  test-mount.py  test-nest-devices.py  test-net-ifup.py  test-net-props.py  (+47 more)
